--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>projeto de vida</title>
 </head>
 <body>
-    <div>aqui vai meu titulo</div>
+    <section class="coteudo-principal">
+        
+    </section>
 </body>
 </html>
